# make-ls

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  STATUS.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-assets.yml  releases.yml
docs/: architecture.md  user-guide.md
editors/vscode/: Makefile  README.md  package-lock.json  package.json
editors/vscode/src/: extension.js
editors/vscode/test/: command-line.test.js
scripts/: publish_release.py  release_version.py
src/make_ls/: __init__.py  __main__.py  _analysis_completion.py  _analysis_diagnostics.py  _analysis_hover.py  _analysis_navigation.py  _analysis_recovery.py  analysis.py  builtin_docs.py  server.py  types.py
src/make_ls/analysis/: __init__.py  completion.py  document_symbols.py  hover.py  navigation.py  recovery.py  signature_help.py
src/make_ls/analysis/diagnostics/: __init__.py  assignment_recovery.py  automatic_variable_outside_recipe.py  base.py  circular_prerequisite.py  common.py  control_blocks.py  make_syntax.py  overriding_recipe.py  shell_syntax.py  unknown_variable.py  unresolved_include.py  unresolved_prerequisite.py
src/make_ls/lsp/: __init__.py  protocols.py  server.py
src/make_ls/lsp/features/: __init__.py  code_actions.py  completion.py  document_symbols.py  hover.py  lifecycle.py  navigation.py  signature_help.py
src/makels/: __init__.py  analysis.py  builtin_docs.py  server.py  types.py
tests/: lsp_harness.py  lsp_test_utils.py  test_analysis.py  test_cli.py  test_e2e.py  test_lsp_code_actions.py  test_lsp_completion.py  test_lsp_document_highlight.py  test_lsp_document_symbols.py  test_lsp_hover.py  test_lsp_navigation.py  test_lsp_parse_diagnostics.py  test_lsp_semantic_diagnostics.py  test_lsp_server.py  test_lsp_signature_help.py
