[project]
name = "makels"
version = "0.1.0"
description = "Makefile language server"
readme = "README.md"
authors = [
    { name = "Lewis Russell", email = "lewis6991@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lsprotocol>=2025.0.0",
    "pygls>=2.1.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "tree-sitter-make>=1.1.1",
]

[project.scripts]
makels = "makels.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportAny = "error"
reportExplicitAny = "error"
reportUnusedCallResult = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
]
