[project]
name = "make-ls"
version = "0.2.0"
description = "Makefile language server"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lewis Russell", email = "lewis6991@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "lsprotocol>=2025.0.0",
    "pygls>=2.1.1",
]

[project.scripts]
make-ls = "make_ls.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests", "scripts"]
venvPath = "."
venv = ".venv"
reportAny = "error"
reportExplicitAny = "error"
reportUnusedCallResult = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
]
