[project]
name = "make-ls"
version = "0.4.0"
description = "Makefile language server"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lewis Russell", email = "lewis6991@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lsprotocol>=2025.0.0",
    "pygls>=2.1.1",
]

[project.scripts]
make-ls = "make_ls.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "all"
include = ["src", "tests", "scripts"]
venvPath = "."
venv = ".venv"
analyzeUnannotatedFunctions = true
reportAny = "error"
reportExplicitAny = "error"
reportImplicitStringConcatenation = "none"
reportUnusedCallResult = "error"
reportPrivateLocalImportUsage = "none"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
target-version = "py312"

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "DTZ",
    "E",
    "F",
    "FIX",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PGH",
    "PTH",
    "PT",
    "RET",
    "RUF",
    "RSE",
    "SIM",
    "SLF",
    "TC",
    "TID",
    "UP",
]

[tool.ruff.lint.flake8-type-checking]
strict = true
